# dno-crawler

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  CLEANUP_TASKS.md  CODE_REVIEW.md  IDEAS.md  MVP_PLAN.md  PROJECT.md  README.md  RESULT_MVP_SUMMARY.md  RESULT_environment_deployment.md  RESULT_mvp_triage.md  RESULT_principles_audit.md  TASK.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  FLOWCHART.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  test_extraction.py
backend/alembic/: env.py
backend/alembic/versions/: 2682f122e71f_initial_schema.py  7f3c1b2d4a10_add_dno_importance_scoring_fields.py  a3b9c7d1e5f2_add_download_registry.py
backend/app/: __init__.py
backend/app/api/: __init__.py  main.py
backend/app/core/: README.md  __init__.py  auth.py  config.py  constants.py  exceptions.py  logging.py  models.py  parsers.py  rate_limiter.py  sanitize.py  security.py
backend/app/crawler/: pdf_extractor.py  search_agent.py
backend/app/db/: __init__.py  ai_seeder.py  database.py  models.py  seeder.py  source_models.py
backend/app/jobs/: __init__.py  common.py  crawl_job.py  enrichment_job.py  extract_job.py  search_job.py
backend/app/services/: __init__.py  bdew_client.py  bulk_extraction.py  completeness.py  content_verifier.py  crawl_recovery.py  dno_creation.py  dno_enrichment.py  dno_resolver.py  encoding_utils.py  file_analyzer.py  html_content_detector.py  importance.py  impressum_extractor.py  pattern_learner.py  pdf_downloader.py  retry_utils.py  robots_parser.py  sample_capture.py  search_engine.py  skeleton_service.py  url_utils.py  user_agent.py  vnb_digital.py  web_crawler.py
backend/app/worker/: __init__.py
backend/archive/: FLOWCHART_old.md  bfs_discovery_test_old.py  sitemap_discovery_old.py  vnb_digital_old.py
backend/docs/: FLOWCHART.md  SPLIT_WORKERS.md
backend/migrations/: add_search_jobs.sql  remove_local_users.sql
backend/scripts/: bulk_enqueue.py  debug_openrouter.py  enrich_seed_data.py  fix_schema.py  format_bulk_html.py  import_mastr_stats.py  init.sql  inspect_ai_config_schema.py  recheck_robots.py  recompute_importance.py  transform_csv_to_json.py
backend/src/api/: __init__.py  main.py
backend/src/core/: __init__.py  config.py  exceptions.py  models.py  security.py
backend/src/db/: __init__.py  database.py  models.py
backend/src/worker/: __init__.py
backend/tests/: conftest.py  flow_test.py  test_auth.py  test_celle_uelzen.py  test_completeness.py  test_crawler_smoke.py  test_dnos.py  test_health.py  test_importance.py  test_search.py
backend/tests/eval/: README.md  config.json  dataset.json  runner.py
backend/tests/integration/: test_search_flow.py
backend/tests/manual/: bfs_crawl_test.py  debug_netze_bw_hlzf.py  dno_recursive_extract.py  (+11 more)
(+305 files in other folders)
