[project]
name = "dno-crawler"
version = "0.1.0"
description = "AI-powered German DNO (Distribution Network Operator) data crawler"
authors = [{ name = "KyleDerZweite" }]
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",

    # Redis
    "redis>=5.0.1",
    "arq>=0.25.0",  # Async job queue

    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",

    # Web Scraping
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "trafilatura>=2.0.0",

    # PDF & Excel Processing
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.3",
    "openpyxl>=3.1.0",

    # LLM Integration (OpenAI-compatible API)
    "openai>=1.50.0",
    "openrouter>=0.1.1",

    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # Authentication
    "pyjwt[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",           # Retries
    "aiofiles>=23.0.0",          # Async file I/O
    "charset_normalizer>=3.3.0", # Encoding detection


    # Date/Time
    "python-dateutil>=2.8.2",

    # Data formats
    "pandas>=2.0.0",   # DataFrame operations for seed data
    "pyarrow>=15.0.0", # Parquet support for seed data
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",          # For testing
    "ruff>=0.1.14",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ERA", # eradicate (commented-out code)
    "ARG", # flake8-unused-arguments
    "PL",  # Pylint
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "PLR0913", # Too many arguments to function call
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
